--- a/nome.ipynb
+++ b/nome.ipynb
@@ -20,7 +20,9 @@
     "nomes = ['ana','carlos','felipe','willow']\n",
     "\n",
     "for indice in range(len(nomes)):\n",
-    "    print(f'Nome {indice + 1 }: {nomes[indice]}')"
+    "    print(f'Nome {indice + 1 }: {nomes[indice]}')\n",
+    "    \n",
+    "lista = int[18,54]"
    ]
   }
  ],
